--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@ https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
 https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
 "></script>
     <script src="./js/task-01.js" type="module"></script>
+    <script src="./js/test_file.js" type="module"></script>
   </body>
 </html>
